force-app/main/default/objects/KYC_Request__c/KYC_Request__c.object-meta.xml
<CustomObject>
    <description>Tracks KYC verification status for each loan application. Stores encrypted PAN and Aadhaar references and records verification outcomes from the external KYC API.</description>
    <label>KYC Request</label>
    <nameField>
        <displayFormat>KYC-{YYYY}-{000000}</displayFormat>
        <label>KYC Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KYC Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>