force-app/main/default/objects/KYC_Request__c/fields/Aadhaar_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar_Encrypted__c</fullName>
    <label>Aadhaar (Encrypted)</label>
    <type>Text</type>
    <length>255</length>
    <description>Stores AES-256 encrypted Aadhaar number. Only last 4 digits may be displayed in UI. Use EncryptionUtil.encrypt() / decrypt() — never store or display plain text.</description>
</CustomField>