force-app/main/default/objects/KYC_Request__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>KYC Requests</relationshipLabel>
    <relationshipName>KYC_Requests</relationshipName>
</CustomField>