force-app/main/default/objects/KYC_Request__c/fields/PAN_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>PAN_Encrypted__c</fullName>
    <label>PAN (Encrypted)</label>
    <type>Text</type>
    <length>255</length>
    <description>Stores AES-256 encrypted PAN number. Use EncryptionUtil.encrypt() / decrypt() — never store or display plain text.</description>
</CustomField>