force-app/main/default/objects/KYC_Request__c/fields/PAN_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>PAN_Verification_Status__c</fullName>
    <label>PAN Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Verified</fullName><default>false</default><label>Verified</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>