force-app/main/default/objects/KYC_Request__c/fields/Rejection_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Remarks__c</fullName>
    <label>Rejection Remarks</label>
    <type>TextArea</type>
</CustomField>