force-app/main/default/objects/KYC_Request__c/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <label>Verified By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>KYC Verifications</relationshipLabel>
    <relationshipName>KYC_Verifications</relationshipName>
</CustomField>